add missing a5 work

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -618,6 +618,8 @@
 
               <p>Bantam was a pleasure to work with. After configuring the file, the offset for the extra, safety board of FR1, and the drill bits I would use, I began to setup and drill. This is where things took a turn for the worse.</p>
 
+              <p>The FR1 was well secured to the bed, and the Bantam file showed everything fitting neatly on the bed, however, after the first 20 minutes of drilling, I noticed the drill eventually moved off the bed when working on the rear groove - something was misaligned.</p>
+
               <div class="work-body-image-grid">
                 <app-image-viewer
                   path="../assets/images/digital-fabrication/a5/printing-1.jpg"
@@ -631,6 +633,9 @@
                 </app-image-viewer>
               </div>
 
+              <p>Looking at the broken piece, I could see that the problems were beyond just the mill going off the FR1. What was drilled was also somewhat mangled -- some of the grooves were lost or bled into the cutout line for the actual base.</p>
+
+              <p>Unfortunately, this happened at the Mill's closing on Saturday night, and I knew I wouldn't have time to return for another go. That said, I can at least use my lessons learned here to inform my work on the next project and on the final!</p>
 
               <div class="assignment-h2">Peer Attribution</div>
 
@@ -640,21 +645,23 @@
 
               <div class="assignment-h2">Files</div>
 
-              <p> <a target="_blank" href="https://cad.onshape.com/documents/3168167813e0e2c1cdc734a4/w/04c46254efd5ce3509ddb88d/e/5d169d831a3ce077debfc261">Onshape Rectangle 1</a>
+              <p> <a target="_blank" href="https://cad.onshape.com/documents/3168167813e0e2c1cdc734a4/w/04c46254efd5ce3509ddb88d/e/5d169d831a3ce077debfc261">Onshape Top/Bottom 1</a>
               </p>
 
-              <p> <a target="_blank" href="https://cad.onshape.com/documents/56eed461055c5d35b290a0b2/w/c758b872d9cb989e8c7781d6/e/f54113318292abf98e0beaee">Onshape Rectangle 2</a>
+              <p> <a target="_blank" href="https://cad.onshape.com/documents/56eed461055c5d35b290a0b2/w/c758b872d9cb989e8c7781d6/e/f54113318292abf98e0beaee">Onshape Side 1</a>
               </p>
 
-              <p><a target="_blank" href="https://cad.onshape.com/documents/02aa12409421f8a0d7bfa93b/w/557645b62f766a23e7a444d5/e/b4d21133a3e6497560ce4f1d">Onshape Assembly</a>
+              <p><a target="_blank" href="https://cad.onshape.com/documents/02aa12409421f8a0d7bfa93b/w/557645b62f766a23e7a444d5/e/b4d21133a3e6497560ce4f1d">Onshape Side 3</a>
               </p>
 
-              <p><a href="../assets/images/digital-fabrication/a4/rectangle-assembly.ai">AI File</a>
+              <p><a href="../assets/images/digital-fabrication/a5/kicad-bottom-top-1.zip">KiCad files</a>
+
+              <p><a href="../assets/images/digital-fabrication/a5/bottom-top-Edge_Cuts.gbr">Gerber file</a>
+
+              <p><a href="../assets/images/digital-fabrication/a5/bantam-recreation.btm">Bantam recreation (crashed right after initial milling)</a>
               </p>
 
             </div>
-
-
 
     </div>
   </section>
