update assets to move below 1gb limit

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -506,12 +506,12 @@
 
               <div class="work-body-image-grid">
                 <app-image-viewer
-                  path="../assets/images/digital-fabrication/a5/caliper-1.jpg"
+                  path="../assets/images/digital-fabrication/a5/caliper-1.png"
                   description="The height"
                   borderOn="false">
                 </app-image-viewer>
                 <app-image-viewer
-                  path="../assets/images/digital-fabrication/a5/caliper-2.jpg"
+                  path="../assets/images/digital-fabrication/a5/caliper-2.png"
                   description="The width"
                   borderOn="false">
                 </app-image-viewer>
@@ -520,7 +520,7 @@
               <p>More importantly, I'd have to ensure that the depth worked perfectly so that it would fit my slots. I took a few measurements and left a few mm of tolerance.</p>
 
               <app-image-viewer
-                path="../assets/images/digital-fabrication/a5/caliper-3.jpg"
+                path="../assets/images/digital-fabrication/a5/caliper-3.png"
                 description="The depth"
                 class="assignment-image">
               </app-image-viewer>
@@ -651,7 +651,7 @@
               <p> <a target="_blank" href="https://cad.onshape.com/documents/22469418efa2f40e6df8a80b/w/b3d234fafcebbeb0082104f4/e/c312a73d7709aa124f9b2d86">Onshape Side 1</a>
               </p>
 
-              <p><a target="_blank" href="https://cad.onshape.com/documents/b4139af7aca93960b604764c/w/0eb78af33adad74bee2af16f/e/20a7242bc5c45b9d08aaca52">Onshape Side 3</a>
+              <p><a target="_blank" href="https://cad.onshape.com/documents/b4139af7aca93960b604764c/w/0eb78af33adad74bee2af16f/e/20a7242bc5c45b9d08aaca52">Onshape Side 2</a>
               </p>
 
               <p><a href="../assets/images/digital-fabrication/a5/kicad-bottom-top-1.zip">KiCad files</a>
