add kirby 3dm file

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -831,6 +831,8 @@
 
         <p><a href="../assets/images/digital-fabrication/a6/kirby-union.stl">Kirby STL file</a>
 
+        <p><a href="../assets/images/digital-fabrication/a6/Kirby.3dm">Kirby Rhino file</a>
+
         <p><a href="../assets/images/digital-fabrication/a6/beethoven-union.stl">Beethoven STL file</a>
 
         <p><a href="../assets/images/digital-fabrication/a6/cutler-beethoven-1001.gcode">Beethoven toolpaths (gcode)</a>
