--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -840,6 +840,100 @@
 
       </div>
 
+      <!-- Assignment 7 -->
+      <div class="assignment-body" *ngIf="selectedAssignment.id === 7">
+
+        <div class="assignment-h2">The Concept</div>
+
+        <p>
+          Benjamin Banneker taught himself how to make clocks at a young age. That is a very 1730s thing to do. Supposedly, at 21, he finished a clock which continued to run until his death, over 50 years later. I think this sounds pretty cool, so I'm taking inspiration from him, and I'm going to try to make a clock... now.
+        </p>
+
+        <p>
+          Horology is also just an interesting subject. My concept is to dip my feet into it by digitally fabricating a simple clock. My hope is to learn a little bit about history, time, math, and digital fabrication along the way.
+        </p>
+
+        <p>
+          Unlike Mr. Banneker, I don’t expect my clock will run for 50 years. It might not run at all. But I plan to give it my best effort, and if all goes well, I’ll have a kind of ugly, prototype clock that I can hang on my wall, and use for about 12-24 hours before it stops running. If it tells accurate time over those 12-24 hours, that will be a bonus, but not something I’ll need to be satisfied. I just want to run a solid pilot of this project over the next week — something I can build on over time.
+        </p>
+
+        <div class="work-body-image-grid">
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a7/clock-1.png"
+            description="A prior make of the clock"
+            borderOn="false">
+          </app-image-viewer>
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a7/clock-2.png"
+            description="Another prior make of the clock"
+            borderOn="false">
+          </app-image-viewer>
+        </div>
+
+        <div class="assignment-h2">A Breakdown of Tasks</div>
+
+        <p>
+          I plan to use the following 4 tools/skills
+        </p>
+
+        <ul>
+          <li>CAD</li>
+          <li>Mechanism Design</li>
+          <li>Laser Cutting</li>
+          <li>3d Printing</li>
+        </ul>
+
+        <p>
+          Pre-existing plans, from Thingiverse, by <a target="_blank" href="https://www.thingiverse.com/thing:1739676">A26</a> and <a target="_blank" href="https://www.thingiverse.com/thing:2819565/comments">drcameron</a>
+        </p>
+
+        <p>
+          Clocks are complicated, but much of the work has been done for me. I think most of the challenge will be in managing tolerances, sizes, mixing laser cut and 3d printed parts, and ensuring everything assembles and runs without unnecessary / debilitating friction.
+        </p>
+
+        <div class="assignment-h2">A Timeline (with Contingency Plans)</div>
+
+        <p>
+          This Weekend, June 1 and 2
+        </p>
+        <p>
+          I plan to model, print, and cut all the parts I need over this coming weekend. It took the plan author 6 hours to 3d print them, so I expect to roughly double that time, so I can also laser cut and integrate parts across both media (and re-print/cut as necessary).
+        </p>
+
+        <p>
+          Next Week, Tuesday the 4th, and Thursday the 6th
+        </p>
+        <p>
+          Once the parts are printed and cut, and the store bought parts arrive, I’ll be at the assembly phase, and I think this is where contingencies really come into play… Even if some parts don’t arrive, I’ll be able to fudge them with available materials or some quick re-prints / re-cuts.
+        </p>
+
+        <p>
+          My contingencies, in order of adoption:
+        </p>
+
+        <ol>
+          <li>Abandon all hope of my clock telling correct time (I kind of already anticipate this, but if all the prints/cuts are clean, it will be attainable)</li>
+          <li>Diminish my expectations of how long the clock will run before friction gets the better of it. My goal would be for a few hours at the better end, a few minutes if I have to compromise. If multiple parts come out super wonky after multiple attempts, I’ll have to accept more friction.</li>
+          <li>Accept that the clock will only operate on the workshop table, with me holding the gears and rotating them manually.</li>
+        </ol>
+
+        <p>
+          I think this is a realistic scale of contingencies, but I don’t foresee needing to go beyond #2
+        </p>
+
+        <div class="assignment-h2">My Bill of Materials and Sourcing Schedule (estimated)</div>
+
+        <ul>
+          <li>Stainless Steel Round Rods, 3mm x 200mm (Saturday and Monday for 2 different sets)</li>
+          <li>Stainless Steel Round Rods, 2mm x 150mm (Saturday)</li>
+          <li>Stainless Steel Round Rods, 3mm x 350mm (Thursday)</li>
+          <li>Deep Groove Ball Bearings, 3 x 6 x 2.5mm (Thursday)</li>
+          <li>PLA, 1.75mm, Blue</li>
+          <li>Plywood</li>
+        </ul>
+
+      </div>
+
 
     </div>
   </section>
