redeploy to hopefully fix issues

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -908,7 +908,7 @@
         </p>
 
         <p>
-          My contingencies, in order of adoption:
+          My contingencies, in the order I'd make them
         </p>
 
         <ol>
