final project assets

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -935,6 +935,71 @@
       </div>
 
 
+
+      <!-- Assignment 8 -->
+      <div class="assignment-body" *ngIf="selectedAssignment.id === 8">
+
+        <p>
+          I think this is a realistic scale of contingencies, but I don’t foresee needing to go beyond #2
+        </p>
+
+        <div class="assignment-h2">3d Printing</div>
+
+        <div class="work-body-image-grid">
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a8/3dprint-1.jpg"
+            description="Failure!"
+            borderOn="false">
+          </app-image-viewer>
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a8/3dprint-2.jpg"
+            description="Failure 2!"
+            borderOn="false">
+          </app-image-viewer>
+        </div>
+
+        <div class="assignment-h2">CAD/Laser Cutting</div>
+
+        <!-- <app-image-viewer
+          path="../assets/images/digital-fabrication/a8/lasercut-1.jpg"
+          description="The laser cut ticks"
+          class="assignment-image">
+        </app-image-viewer> -->
+
+        <div class="work-body-image-grid">
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a8/CAD-1.png"
+            description="Design"
+            borderOn="false">
+          </app-image-viewer>
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a8/lasercut-1.jpg"
+            description="Cut"
+            borderOn="false">
+          </app-image-viewer>
+        </div>
+
+        <div class="assignment-h2">Some parts moving... aka "running"</div>
+
+        <p>It sort of runs! When I spin it!
+          <a target="_blank" href="https://drive.google.com/file/d/1-jzwPkot4jq1AEsaOBj1QKdlvpesQnoF/view?usp=sharing">"running"</a>
+        </p>
+
+        <div class="assignment-h2">Credit!</div>
+
+        <p>
+          Credit where credit is due! From Thingiverse, credit to <a target="_blank" href="https://www.thingiverse.com/thing:1739676">A26</a> and <a target="_blank" href="https://www.thingiverse.com/thing:2819565/comments">drcameron</a>
+        </p>
+
+        <p>
+          Beyond the actual OG designers, credit and thanks to Corynne in particular! She lent me her filament so that I could run redundant jobs.
+        </p>
+
+
+
+      </div>
+
+
     </div>
   </section>
 </article>
