add more assets

--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -958,13 +958,26 @@
           </app-image-viewer>
         </div>
 
+        <div class="assignment-h2">3d Printing Better</div>
+
+        <div class="work-body-image-grid">
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a8/3dprint-3.jpg"
+            description="Failure!"
+            borderOn="false">
+          </app-image-viewer>
+          <app-image-viewer
+            path="../assets/images/digital-fabrication/a8/3dprint-4.jpg"
+            description="Failure 2!"
+            borderOn="false">
+          </app-image-viewer>
+        </div>
+
         <div class="assignment-h2">CAD/Laser Cutting</div>
 
-        <!-- <app-image-viewer
-          path="../assets/images/digital-fabrication/a8/lasercut-1.jpg"
-          description="The laser cut ticks"
-          class="assignment-image">
-        </app-image-viewer> -->
+        <p>
+          A face for a clock that tells "a time."
+        </p>
 
         <div class="work-body-image-grid">
           <app-image-viewer
@@ -981,8 +994,14 @@
 
         <div class="assignment-h2">Some parts moving... aka "running"</div>
 
+        <app-image-viewer
+          path="../assets/images/digital-fabrication/a8/assembly-1.jpg"
+          description="Assembled"
+          class="assignment-image">
+        </app-image-viewer>
+
         <p>It sort of runs! When I spin it!
-          <a target="_blank" href="https://drive.google.com/file/d/1-jzwPkot4jq1AEsaOBj1QKdlvpesQnoF/view?usp=sharing">"running"</a>
+          <a target="_blank" href="https://drive.google.com/file/d/1-jzwPkot4jq1AEsaOBj1QKdlvpesQnoF/view?usp=sharing">The clock "running"</a>
         </p>
 
         <div class="assignment-h2">Credit!</div>
