--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -939,21 +939,17 @@
       <!-- Assignment 8 -->
       <div class="assignment-body" *ngIf="selectedAssignment.id === 8">
 
-        <p>
-          I think this is a realistic scale of contingencies, but I don’t foresee needing to go beyond #2
-        </p>
-
         <div class="assignment-h2">3d Printing</div>
 
         <div class="work-body-image-grid">
           <app-image-viewer
             path="../assets/images/digital-fabrication/a8/3dprint-1.jpg"
-            description="Failure!"
+            description="Better print 1"
             borderOn="false">
           </app-image-viewer>
           <app-image-viewer
             path="../assets/images/digital-fabrication/a8/3dprint-2.jpg"
-            description="Failure 2!"
+            description="Better print 2"
             borderOn="false">
           </app-image-viewer>
         </div>
@@ -1012,6 +1008,10 @@
 
         <p>
           Beyond the actual OG designers, credit and thanks to Corynne in particular! She lent me her filament so that I could run redundant jobs.
+        </p>
+
+        <p>
+          Also, many thanks to everyone who saw my prints going and prayed for me.
         </p>
 
 
