--- a/src/app/digital-fabrication/digital-fabrication.component.html
+++ b/src/app/digital-fabrication/digital-fabrication.component.html
@@ -944,12 +944,12 @@
         <div class="work-body-image-grid">
           <app-image-viewer
             path="../assets/images/digital-fabrication/a8/3dprint-1.jpg"
-            description="Better print 1"
+            description="Failure!"
             borderOn="false">
           </app-image-viewer>
           <app-image-viewer
             path="../assets/images/digital-fabrication/a8/3dprint-2.jpg"
-            description="Better print 2"
+            description="More failure!"
             borderOn="false">
           </app-image-viewer>
         </div>
@@ -959,12 +959,12 @@
         <div class="work-body-image-grid">
           <app-image-viewer
             path="../assets/images/digital-fabrication/a8/3dprint-3.jpg"
-            description="Failure!"
+            description="Better print 1"
             borderOn="false">
           </app-image-viewer>
           <app-image-viewer
             path="../assets/images/digital-fabrication/a8/3dprint-4.jpg"
-            description="Failure 2!"
+            description="Better print 2"
             borderOn="false">
           </app-image-viewer>
         </div>
@@ -1011,7 +1011,7 @@
         </p>
 
         <p>
-          Also, many thanks to everyone who saw my prints going and prayed for me.
+          Also, many thanks to everyone who prayed for my 3d prints to resolve error free.
         </p>
 
 
